challenge 2:Creating a cat generator

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,3 +18,16 @@
     border: 1px solid black;
     align-items: center;
 }
+
+
+/* Challenge 2: Create a cat generator (CSS)*/
+.container-2{
+    border:1px solid red;
+    width: 75%;
+    margin: 0 auto;
+    text-align: center;
+}
+.flex-box-container-2{
+    display: flex;
+    border: 1px solid blue;
+}
