finish adding the random cat generator functionalities

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@
 
 /* Challenge 2: Create a cat generator (CSS)*/
 .container-2{
-    border:1px solid red;
+    border:1px solid black;
     width: 75%;
     margin: 0 auto;
     text-align: center;
@@ -30,10 +30,10 @@
 .flex-box-container-2{
     display: flex;
     justify-content: space-around;
-    border: 1px solid blue;
+    border: 1px solid black;
     flex-wrap: wrap;
 }
 .flex-box-container-2 img{
-    border: 1px solid green;
     padding: 10px;
+    box-shadow: 0px 10px 50px rgba(0,0,0,0.7);
 }
